# opda

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  conftest.py  dev-requirements.txt  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-and-deploy-docs.yml  build.yml  deploy.yml  release.yml
data/alexnet/: LICENSE  README.md  alexnet_tuning.results.jsonl
data/convnext/: LICENSE  README.md  convnext-tiny_tuning.results.jsonl
data/deberta/: LICENSE  README  README.md  deberta-base.results.jsonl  deberta-v3-base.results.jsonl
data/llama/: LICENSE  README.md
data/resnet/: LICENSE  README.md
docs/: conf.py  docs.mplstyle  index.rst
docs/_ext/: toctreelinks.py
docs/contributing/: development.rst  release.rst
docs/tutorial/: citation.rst  development.rst  examples.rst  setup.rst  usage.rst
nbs/: optimal-design-analysis.ipynb
nbs/experiments/: analyzing-variation-due-to-random-seeds.ipynb  choosing-a-sample-size-for-the-nonparametric-analysis.ipynb  comparing-to-point-estimates.ipynb  demonstrating-the-exact-coverage-of-the-nonparametric-analysis.ipynb  evaluating-debertav3-with-the-nonparametric-analysis.ipynb  generalizing-the-parametric-analysis-across-architectures.ipynb  studying-ablations-of-the-nonparametric-analysis.ipynb  validating-the-parametric-analysis-in-practice.ipynb
nbs/theory/: formalizing-the-problem.ipynb  nonparametric-analysis.ipynb  parametric-analysis.ipynb
src/ersa/: __init__.py  exceptions.py  nonparametric.py  parametric.py  utils.py
src/experiments/: __init__.py  analytic.py  default.mplstyle  simulation.py  visualization.py
src/opda/: __init__.py  _approximations.json  approximation.py  exceptions.py  nonparametric.py  parametric.py  random.py  utils.py
tests/: __init__.py  conftest.py  testcases.py
tests/ersa/: __init__.py  test_exceptions.py  test_nonparametric.py  test_parametric.py  test_utils.py
tests/experiments/: __init__.py  test_analytic.py  test_simulation.py  test_visualization.py
tests/opda/: __init__.py  test_approximation.py  test_exceptions.py  test_nonparametric.py  test_parametric.py  test_random.py  test_utils.py
